# virtinitrd

./: .gitignore  Cargo.toml  README.md  chrootvm  mkvirtinitrd
src/: main.rs
